# vivax.dev-old-fluent-web

./: .gitignore  Cargo.toml  Trunk.toml  build.rs  index.html
.github/workflows/: publish-page.yaml
src_fluent/: App.fluent  Background.fluent  Home.fluent  Other.fluent  Role.fluent  Router.fluent  TopBar.fluent  TopBarLink.fluent  main.rs
